omap5432 kernel config for KVM

--- a/arch/arm/configs/omap5uevm_defconfig
+++ b/arch/arm/configs/omap5uevm_defconfig
@@ -241,6 +241,7 @@ CONFIG_IOSCHED_CFQ=y
 # CONFIG_DEFAULT_CFQ is not set
 CONFIG_DEFAULT_NOOP=y
 CONFIG_DEFAULT_IOSCHED="noop"
+CONFIG_PREEMPT_NOTIFIERS=y
 CONFIG_UNINLINE_SPIN_UNLOCK=y
 CONFIG_FREEZER=y
 
@@ -357,8 +358,8 @@ CONFIG_CPU_CP15_MMU=y
 #
 # Processor Features
 #
-# CONFIG_ARM_LPAE is not set
-# CONFIG_ARCH_PHYS_ADDR_T_64BIT is not set
+CONFIG_ARM_LPAE=y
+CONFIG_ARCH_PHYS_ADDR_T_64BIT=y
 CONFIG_ARM_THUMB=y
 CONFIG_ARM_THUMBEE=y
 CONFIG_ARM_VIRT_EXT=y
@@ -438,9 +439,10 @@ CONFIG_HAVE_MEMBLOCK=y
 CONFIG_MEMORY_ISOLATION=y
 CONFIG_PAGEFLAGS_EXTENDED=y
 CONFIG_SPLIT_PTLOCK_CPUS=999999
+CONFIG_BALLOON_COMPACTION=y
 CONFIG_COMPACTION=y
 CONFIG_MIGRATION=y
-# CONFIG_PHYS_ADDR_T_64BIT is not set
+CONFIG_PHYS_ADDR_T_64BIT=y
 CONFIG_ZONE_DMA_FLAG=0
 CONFIG_BOUNCE=y
 CONFIG_VIRT_TO_BUS=y
@@ -466,7 +468,6 @@ CONFIG_ZBOOT_ROM_TEXT=0x0
 CONFIG_ZBOOT_ROM_BSS=0x0
 # CONFIG_ARM_APPENDED_DTB is not set
 CONFIG_CMDLINE="root=/dev/ram rootwait console=ttyO2,115200"
-# CONFIG_XIP_KERNEL is not set
 CONFIG_KEXEC=y
 # CONFIG_CRASH_DUMP is not set
 # CONFIG_AUTO_ZRELADDR is not set
@@ -692,7 +693,7 @@ CONFIG_REGMAP=y
 CONFIG_REGMAP_I2C=y
 CONFIG_REGMAP_SPI=y
 CONFIG_REGMAP_IRQ=y
-CONFIG_DMA_SHARED_BUFFER=y
+# CONFIG_DMA_SHARED_BUFFER is not set
 CONFIG_CMA=y
 # CONFIG_CMA_DEBUG is not set
 
@@ -1939,14 +1940,14 @@ CONFIG_DMA_VIRTUAL_CHANNELS=y
 # CONFIG_DMATEST is not set
 # CONFIG_AUXDISPLAY is not set
 # CONFIG_UIO is not set
-# CONFIG_VFIO is not set
 CONFIG_VIRTIO=y
 
 #
 # Virtio drivers
 #
-# CONFIG_VIRTIO_BALLOON is not set
-# CONFIG_VIRTIO_MMIO is not set
+CONFIG_VIRTIO_BALLOON=y
+CONFIG_VIRTIO_MMIO=y
+CONFIG_VIRTIO_MMIO_CMDLINE_DEVICES=y
 
 #
 # Microsoft Hyper-V guest support
@@ -2014,28 +2015,17 @@ CONFIG_MAILBOX=y
 CONFIG_OMAP2PLUS_MBOX=y
 CONFIG_MBOX_KFIFO_SIZE=256
 CONFIG_MBOX_DATA_SIZE=4
-CONFIG_IOMMU_API=y
-CONFIG_IOMMU_SUPPORT=y
-CONFIG_OF_IOMMU=y
-CONFIG_OMAP_IOMMU=y
-CONFIG_OMAP_IOVMM=y
-CONFIG_OMAP_IOMMU_DEBUG=y
+# CONFIG_IOMMU_SUPPORT is not set
 
 #
 # Remoteproc drivers
 #
-CONFIG_REMOTEPROC=y
-CONFIG_OMAP_REMOTEPROC=y
-# CONFIG_OMAP_REMOTEPROC_IPU is not set
-# CONFIG_OMAP_REMOTEPROC_DSP is not set
 # CONFIG_STE_MODEM_RPROC is not set
 
 #
 # Rpmsg drivers
 #
-CONFIG_RPMSG=y
-CONFIG_RPMSG_RPC=y
-# CONFIG_VIRT_DRIVERS is not set
+CONFIG_VIRT_DRIVERS=y
 CONFIG_PM_DEVFREQ=y
 
 #
@@ -2455,3 +2445,15 @@ CONFIG_ARCH_HAS_ATOMIC64_DEC_IF_POSITIVE=y
 CONFIG_AVERAGE=y
 # CONFIG_CORDIC is not set
 CONFIG_DDR=y
+CONFIG_HAVE_KVM_IRQCHIP=y
+CONFIG_KVM_MMIO=y
+CONFIG_VIRTUALIZATION=y
+CONFIG_KVM=y
+CONFIG_KVM_ARM_HOST=y
+CONFIG_KVM_ARM_MAX_VCPUS=4
+CONFIG_KVM_ARM_VGIC=y
+CONFIG_KVM_ARM_TIMER=y
+
+#
+# Virtio drivers
+#
